# py-durable

./: GETTING_STARTED.md  README.md  pyproject.toml
pydurable/: __init__.py  entry_cli.py
pydurable/cli/: apikey.py  aws.py  config.py  func.py  login.py  temporal.py
pydurable/worker/: __init__.py  client.py  interceptor.py  wait_for_exit.py  worker.py
